--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://Mahmoud-Khalifa19.github.io/vendorspace",
   "name": "vendorspace",
   "version": "0.1.0",
   "private": true,
@@ -10,11 +11,14 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-scripts": "^5.0.1",
+    "react-scroll": "^1.8.9",
     "react-typed": "^1.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
+    "predploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
